First commit of GoodUSB
Non-working checkpoint of in-progress work.

* Direct passthourgh keyboard input [IMPLEMENTED]
* TODO: HID Mouse support for move and click
* TODO: SSL support for HTTP and Websocket
* TODO: Direct input mode (connect keyboard and mouse to USB-C)

--- a/web/error404.html
+++ b/web/error404.html
@@ -19,6 +19,7 @@
         <nav>
             <ul class="menu">
                 <li><a href="index.html">WiFi Duck</a></li>
+                <li><a href="good.html">GoodUSB</a></li>
                 <li><a href="settings.html">Settings</a></li>
                 <li><a href="terminal.html">Terminal</a></li>
                 <li><a href="credits.html">About</a></li>
