Update to first version of working keyboard
All modifiers
All standard keys
Most special keys

--- a/web/good.html
+++ b/web/good.html
@@ -43,6 +43,14 @@
                     <input class="smooth" id="keyboard"/>
                 </div>
                 <div class="row">
+                    <p><b>Special: </b><span id="freeMemory">-</span></p>
+                    <button class="success" id="switch_app">Switch App</button>
+                    <button class="success" id="switch_window">Switch Window</button>
+                    <button class="warn" id="lock_mac">Lock Mac</button>
+                    <button class="warn" id="lock_win">Lock Win</button>
+                    <button class="danger" id="ctrl_alt_del">CTRL ALT DEL</button>
+                </div>
+                <div class="row">
                     <div class="debugger">
                         Output: <span id="editorinfo">saved</span>
                     </div>
