Add spotlight button

--- a/web/good.html
+++ b/web/good.html
@@ -38,12 +38,13 @@
                 </div>
             </section>
             <section>
-                <h1>Keyboard <a class="reload" id="keyboardReload">&#x21bb;</a></h1>
+                <h1>Keyboard</h1>
                 <div class="row">
                     <input class="smooth" id="keyboard"/>
                 </div>
                 <div class="row">
                     <p><b>Special: </b><span id="freeMemory">-</span></p>
+                    <button class="success" id="spotlight">Spotlight</button>
                     <button class="success" id="switch_app">Switch App</button>
                     <button class="success" id="switch_window">Switch Window</button>
                     <button class="warn" id="lock_mac">Lock Mac</button>
