Add new (gui n) and new tab (gui t) buttons

--- a/web/good.html
+++ b/web/good.html
@@ -43,12 +43,16 @@
                     <input class="smooth" id="keyboard"/>
                 </div>
                 <div class="row">
-                    <p><b>Special: </b><span id="freeMemory">-</span></p>
+                    <p><b>Special: </b></p>
                     <button class="success" id="spotlight">Spotlight</button>
+                    <button class="success" id="new">New</button>
+                    <button class="success" id="new_tab">New Tab</button>
                     <button class="success" id="switch_app">Switch App</button>
                     <button class="success" id="switch_window">Switch Window</button>
                     <button class="warn" id="lock_mac">Lock Mac</button>
                     <button class="warn" id="lock_win">Lock Win</button>
+                    <button class="danger" id="close">Close Window</button>
+                    <button class="danger" id="quit">Quit Program</button>
                     <button class="danger" id="ctrl_alt_del">CTRL ALT DEL</button>
                 </div>
                 <div class="row">
