Add refresh button

--- a/web/good.html
+++ b/web/good.html
@@ -47,6 +47,7 @@
                     <button class="success" id="spotlight">Spotlight</button>
                     <button class="success" id="new">New</button>
                     <button class="success" id="new_tab">New Tab</button>
+                    <button class="success" id="refresh">Refresh</button>
                     <button class="success" id="switch_app">Switch App</button>
                     <button class="success" id="switch_window">Switch Window</button>
                     <button class="warn" id="lock_mac">Lock Mac</button>
