--- a/web/good.html
+++ b/web/good.html
@@ -62,6 +62,60 @@
                     </div>
                 </div>
             </section>
+            <section>
+                <h3>Other Keys</h3>
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Key</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td><code>ENTER</code></td>
+                        </tr>
+                        <tr>
+                            <td><code>MENU</code> or <code>APP</code></td>
+                        </tr>
+                        <tr>
+                            <td><code>DELETE</code></td>
+                        </tr>
+                        <tr>
+                            <td><code>HOME</code></td>
+                        </tr>
+                        <tr>
+                            <td><code>INSERT</code></td>
+                        </tr>
+                        <tr>
+                            <td><code>PAGEUP</code></td>
+                        </tr>
+                        <tr>
+                            <td><code>PAGEDOWN</code></td>
+                        </tr>
+                        <tr>
+                            <td><code>UP</code> or <code>UPARROW</code></td>
+                        </tr>
+                        <tr>
+                            <td><code>DOWN</code> or <code>DOWNARROW</code></td>
+                        </tr>
+                        <tr>
+                            <td><code>LEFT</code> or <code>LEFTARROW</code></td>
+                        </tr>
+                        <tr>
+                            <td><code>RIGHT</code> or <code>RIGHTARROW</code></td>
+                        </tr>
+                        <tr>
+                            <td><code>TAB</code></td>
+                        </tr>
+                        <tr>
+                            <td><code>END</code></td>
+                        </tr>
+                        <tr>
+                            <td><code>ESC</code> or <code>ESCAPE</code></td>
+                        </tr>
+                   </tbody>
+                </table>
+            </section>
         </main>
         <footer>
             <a href="https://github.com/spacehuhntech/WiFiDuck" target="_blank">Source</a>
