Add Backspace key

--- a/web/good.html
+++ b/web/good.html
@@ -81,6 +81,9 @@
                             <td><code>DELETE</code></td>
                         </tr>
                         <tr>
+                            <td><code>BACKSPACE</code></td>
+                        </tr>
+                        <tr>
                             <td><code>HOME</code></td>
                         </tr>
                         <tr>
