--- a/web/good.html
+++ b/web/good.html
@@ -84,6 +84,9 @@
                             <td><code>BACKSPACE</code></td>
                         </tr>
                         <tr>
+                            <td><code>SPACE</code></td>
+                        </tr>
+                        <tr>
                             <td><code>HOME</code></td>
                         </tr>
                         <tr>
