Support wake_usb hardware hack and update key order
This supports using D0 and D10 to briefly ground D+ and reset usb.

Solder D0 and D10 both to D+ in order to use this workaround.

TODO: Check if this can be done with one GPIO by changing current
settings from 20mA to 40mA (the usb pins are 40mA capable).

TODO: See if this can be done purely in software / firmware.

--- a/web/good.html
+++ b/web/good.html
@@ -34,6 +34,7 @@
                     <p><b>Storage: </b><span id="freeMemory">-</span></p>
                     <button class="danger" id="format">format</button>
                     <button class="warn" id="stop">stop</button>
+                    <button class="success" id="wake_usb">wake usb</button>
                     <button class="white" id="reconnect">reconnect</button>
                 </div>
             </section>
@@ -75,7 +76,7 @@
                             <td><code>ENTER</code></td>
                         </tr>
                         <tr>
-                            <td><code>MENU</code> or <code>APP</code></td>
+                            <td><code>ESC</code> or <code>ESCAPE</code></td>
                         </tr>
                         <tr>
                             <td><code>DELETE</code></td>
@@ -87,16 +88,7 @@
                             <td><code>SPACE</code></td>
                         </tr>
                         <tr>
-                            <td><code>HOME</code></td>
-                        </tr>
-                        <tr>
-                            <td><code>INSERT</code></td>
-                        </tr>
-                        <tr>
-                            <td><code>PAGEUP</code></td>
-                        </tr>
-                        <tr>
-                            <td><code>PAGEDOWN</code></td>
+                            <td><code>TAB</code></td>
                         </tr>
                         <tr>
                             <td><code>UP</code> or <code>UPARROW</code></td>
@@ -111,13 +103,22 @@
                             <td><code>RIGHT</code> or <code>RIGHTARROW</code></td>
                         </tr>
                         <tr>
-                            <td><code>TAB</code></td>
+                            <td><code>HOME</code></td>
+                        </tr>
+                        <tr>
+                            <td><code>PAGEUP</code></td>
+                        </tr>
+                        <tr>
+                            <td><code>PAGEDOWN</code></td>
                         </tr>
                         <tr>
                             <td><code>END</code></td>
                         </tr>
                         <tr>
-                            <td><code>ESC</code> or <code>ESCAPE</code></td>
+                            <td><code>MENU</code> or <code>APP</code></td>
+                        </tr>
+                        <tr>
+                            <td><code>INSERT</code></td>
                         </tr>
                    </tbody>
                 </table>
